Added support for dnf-automatic

--- a/templates/dnf.j2
+++ b/templates/dnf.j2
@@ -3,289 +3,8 @@
 {{ '# ' + 'Do not edit manually' }}
 
 {% for d in vars['dnf_settings_main'] %}
-{% if loop.first %}
+{% if loop['first'] %}
 {{ '[main]' }}
 {% endif %}
-{% if d['allow_vendor_change'] is defined and d['allow_vendor_change'] in
-  ['true', 'false'] %}
-{{ 'allow_vendor_change=' + d['allow_vendor_change'] }}
-{% endif %}
-{% if d['arch'] is defined and d['arch'] != '' %}
-{{ 'arch=' + d['arch'] }}
-{% endif %}
-{% if d['assumeno'] is defined and d['assumeno'] in ['true', 'false'] %}
-{{ 'assumeno=' + d['assumeno'] }}
-{% endif %}
-{% if d['assumeyes'] is defined and d['assumeyes'] in ['true', 'false'] %}
-{{ 'assumeyes=' + d['assumeyes'] }}
-{% endif %}
-{% if d['autocheck_running_kernel'] is defined and
-  d['autocheck_running_kernel'] in ['true', 'false'] %}
-{{ 'autocheck_running_kernel=' + d['autocheck_running_kernel'] }}
-{% endif %}
-{% if d['basearch'] is defined and d['basearch'] != '' %}
-{{ 'basearch=' + d['basearch'] }}
-{% endif %}
-{% if d['best'] is defined and d['best'] in ['true', 'false'] %}
-{{ 'best=' + d['best'] }}
-{% endif %}
-{% if d['cachedir'] is defined and d['cachedir'] != '' %}
-{{ 'cachedir=' + d['cachedir'] }}
-{% endif %}
-{% if d['cacheonly'] is defined and d['cacheonly'] in ['true', 'false'] %}
-{{ 'cacheonly=' + d['cacheonly'] }}
-{% endif %}
-{% if d['check_config_file_age'] is defined and d['check_config_file_age'] in
-  ['true', 'false'] %}
-{{ 'check_config_file_age=' + d['check_config_file_age'] }}
-{% endif %}
-{% if d['clean_requirements_on_remove'] is defined and
-  d['clean_requirements_on_remove'] in ['true', 'false'] %}
-{{ 'clean_requirements_on_remove=' + d['clean_requirements_on_remove'] }}
-{% endif %}
-{% if d['config_file_path'] is defined and d['config_file_path'] != '' %}
-{{ 'config_file_path=' + d['config_file_path'] }}
-{% endif %}
-{% if d['debuglevel'] is defined and d['debuglevel'] != '' %}
-{{ 'debuglevel=' ~ d['debuglevel'] }}
-{% endif %}
-{% if d['debug_solver'] is defined and d['debug_solver'] in ['true', 'false'] %}
-{{ 'debug_solver=' + d['debug_solver'] }}
-{% endif %}
-{% if d['defaultyes'] is defined and d['defaultyes'] in ['true', 'false'] %}
-{{ 'defaultyes=' + d['defaultyes'] }}
-{% endif %}
-{% if d['diskspacecheck'] is defined and d['diskspacecheck'] in ['true',
-  'false'] %}
-{{ 'diskspacecheck=' + d['diskspacecheck'] }}
-{% endif %}
-{% if d['exit_on_lock'] is defined and d['exit_on_lock'] in ['true', 'false'] %}
-{{ 'exit_on_lock=' + d['exit_on_lock'] }}
-{% endif %}
-{% if d['gpgkey_dns_verification'] is defined and
-  d['gpgkey_dns_verification'] in ['true', 'false'] %}
-{{ 'gpgkey_dns_verification=' + d['gpgkey_dns_verification'] }}
-{% endif %}
-{% if d['group_package_types'] is defined and d['group_package_types'] != '' %}
-{{ 'group_package_types=' + d['group_package_types'] | join(', ') }}
-{% endif %}
-{% if d['ignorearch'] is defined and d['ignorearch'] in ['true', 'false'] %}
-{{ 'ignorearch=' + d['ignorearch'] }}
-{% endif %}
-{% if d['installonlypkgs'] is defined and d['installonlypkgs'] != '' %}
-{{ 'installonlypkgs=' + d['installonlypkgs'] | join(' ') }}
-{% endif %}
-{% if d['installonly_limit'] is defined and d['installonly_limit'] != '' %}
-{{ 'installonly_limit=' ~ d['installonly_limit'] }}
-{% endif %}
-{% if d['installroot'] is defined and d['installroot'] != '' %}
-{{ 'installroot=' + d['installroot'] }}
-{% endif %}
-{% if d['install_weak_deps'] is defined and d['install_weak_deps'] in
-  ['true', 'false'] %}
-{{ 'install_weak_deps=' + d['install_weak_deps'] }}
-{% endif %}
-{% if d['keepcache'] is defined and d['keepcache'] in ['true', 'false'] %}
-{{ 'keepcache=' + d['keepcache'] }}
-{% endif %}
-{% if d['logdir'] is defined and d['logdir'] != '' %}
-{{ 'logdir=' + d['logdir'] }}
-{% endif %}
-{% if d['logfilelevel'] is defined and d['logfilelevel'] != '' %}
-{{ 'logfilelevel=' ~ d['logfilelevel'] }}
-{% endif %}
-{% if d['log_compress'] is defined and d['log_compress'] in ['true', 'false'] %}
-{{ 'log_compress=' + d['log_compress'] }}
-{% endif %}
-{% if d['log_rotate'] is defined and d['log_rotate'] != '' %}
-{{ 'log_rotate=' ~ d['log_rotate'] }}
-{% endif %}
-{% if d['log_size'] is defined and d['log_size'] != '' %}
-{{ 'log_size=' ~ d['log_size'] }}
-{% endif %}
-{% if d['metadata_timer_sync'] is defined and d['metadata_timer_sync'] != '' %}
-{{ 'metadata_timer_sync=' ~ d['metadata_timer_sync'] }}
-{% endif %}
-{% if d['module_obsoletes'] is defined and d['module_obsoletes'] in
-  ['true', 'false'] %}
-{{ 'module_obsoletes=' + d['module_obsoletes'] }}
-{% endif %}
-{% if d['module_platform_id'] is defined and d['module_platform_id'] != '' %}
-{{ 'module_platform_id=' + d['module_platform_id'] }}
-{% endif %}
-{% if d['module_obsoletes'] is defined and d['module_obsoletes'] in
-  ['true', 'false'] %}
-{{ 'module_obsoletes=' + d['module_obsoletes'] }}
-{% endif %}
-{% if d['module_stream_switch'] is defined and d['module_stream_switch'] in
-  ['true', 'false'] %}
-{{ 'module_stream_switch=' + d['module_stream_switch'] }}
-{% endif %}
-{% if d['multilib_policy'] is defined and d['multilib_policy'] in ['best',
-  'all'] %}
-{{ 'multilib_policy=' + d['multilib_policy'] }}
-{% endif %}
-{% if d['obsoletes'] is defined and d['obsoletes'] in ['true', 'false'] %}
-{{ 'obsoletes=' + d['obsoletes'] }}
-{% endif %}
-{% if d['persistdir'] is defined and d['persistdir'] != '' %}
-{{ 'persistdir=' + d['persistdir'] }}
-{% endif %}
-{% if d['pluginconfpath'] is defined and d['pluginconfpath'] != '' %}
-{{ 'pluginconfpath=' + d['pluginconfpath'] }}
-{% endif %}
-{% if d['pluginpath'] is defined and d['pluginpath'] != '' %}
-{{ 'pluginpath=' + d['pluginpath'] }}
-{% endif %}
-{% if d['plugins'] is defined and d['plugins'] in ['true', 'false'] %}
-{{ 'plugins=' + d['plugins'] }}
-{% endif %}
-{% if d['protected_packages'] is defined and d['protected_packages'] != '' %}
-{{ 'protected_packages=' + d['protected_packages'] | join(', ') }}
-{% endif %}
-{% if d['protect_running_kernel'] is defined and d['protect_running_kernel']
-  in ['true', 'false'] %}
-{{ 'protect_running_kernel=' + d['protect_running_kernel'] }}
-{% endif %}
-{% if d['releasever'] is defined and d['releasever'] != '' %}
-{{ 'releasever=' + d['releasever'] }}
-{% endif %}
-{% if d['reposdir'] is defined and d['reposdir'] != '' %}
-{{ 'reposdir=' + d['reposdir'] | join(', ') }}
-{% endif %}
-{% if d['rpmverbosity'] is defined and d['rpmverbosity'] in ['critical',
-  'emergency', 'error', 'warn', 'info', 'debug'] %}
-{{ 'rpmverbosity=' + d['rpmverbosity'] }}
-{% endif %}
-{% if d['strict'] is defined and d['strict'] in ['true', 'false'] %}
-{{ 'strict=' + d['strict'] }}
-{% endif %}
-{% if d['tsflags'] is defined and d['tsflags'] != '' %}
-{{ 'tsflags=' + d['tsflags'] | join(', ') }}
-{% endif %}
-{% if d['upgrade_group_objects_upgrade'] is defined and
-  d['upgrade_group_objects_upgrade'] in ['true', 'false'] %}
-{{ 'upgrade_group_objects_upgrade=' + d['upgrade_group_objects_upgrade'] }}
-{% endif %}
-{% if d['varsdir'] is defined and d['varsdir'] != '' %}
-{{ 'varsdir=' + d['varsdir'] | join(', ') }}
-{% endif %}
-{% if d['zchunk'] is defined and d['zchunk'] in ['true', 'false'] %}
-{{ 'zchunk=' + d['zchunk'] }}
-{% endif %}
-{#} OPTIONS FOR BOTH [MAIN] AND REPO {#}
-{% if d['bandwidth'] is defined and d['bandwidth'] != '' %}
-{{ 'bandwidth=' ~ d['bandwidth'] }}
-{% endif %}
-{% if d['countme'] is defined and d['countme'] in ['true', 'false'] %}
-{{ 'countme=' + d['countme'] }}
-{% endif %}
-{% if d['deltarpm'] is defined and d['deltarpm'] in ['true', 'false'] %}
-{{ 'deltarpm=' + d['deltarpm'] }}
-{% endif %}
-{% if d['deltarpm_percentage'] is defined and d['deltarpm_percentage'] != '' %}
-{{ 'deltarpm_percentage=' ~ d['deltarpm_percentage'] }}
-{% endif %}
-{% if d['enablegroups'] is defined and d['enablegroups'] in ['true', 'false'] %}
-{{ 'enablegroups=' + d['enablegroups'] }}
-{% endif %}
-{% if d['excludepkgs'] is defined and d['excludepkgs'] != '' %}
-{{ 'excludepkgs=' + d['excludepkgs'] | join(', ') }}
-{% endif %}
-{% if d['fastestmirror'] is defined and d['fastestmirror'] in ['true',
-  'false'] %}
-{{ 'fastestmirror=' + d['fastestmirror'] }}
-{% endif %}
-{% if d['gpgcheck'] is defined and d['gpgcheck'] in ['true', 'false'] %}
-{{ 'gpgcheck=' + d['gpgcheck'] }}
-{% endif %}
-{% if d['includepkgs'] is defined and d['includepkgs'] != '' %}
-{{ 'includepkgs=' + d['includepkgs'] | join(', ') }}
-{% endif %}
-{% if d['ip_resolve'] is defined and d['ip_resolve'] in ['4', '6', 'IPv4',
-  'IPv6'] %}
-{{ 'ip_resolve=' ~ d['ip_resolve'] }}
-{% endif %}
-{% if d['localpkg_gpgcheck'] is defined and d['localpkg_gpgcheck'] in
-  ['true', 'false'] %}
-{{ 'localpkg_gpgcheck=' + d['localpkg_gpgcheck'] }}
-{% endif %}
-{% if d['max_parallel_downloads'] is defined and
-  d['max_parallel_downloads'] != '' %}
-{{ 'max_parallel_downloads=' ~ d['max_parallel_downloads'] }}
-{% endif %}
-{% if d['metadata_expire'] is defined and d['metadata_expire'] != '' %}
-{{ 'metadata_expire=' ~ d['metadata_expire'] }}
-{% endif %}
-{% if d['minrate'] is defined and d['minrate'] != '' %}
-{{ 'minrate=' ~ d['minrate'] }}
-{% endif %}
-{% if d['password'] is defined and d['password'] != '' %}
-{{ 'password=' ~ d['password'] }}
-{% endif %}
-{% if d['proxy'] is defined and d['proxy'] != '' %}
-{{ 'proxy=' + d['proxy'] }}
-{% endif %}
-{% if d['proxy_username'] is defined and d['proxy_username'] != '' %}
-{{ 'proxy_username=' + d['proxy_username'] }}
-{% endif %}
-{% if d['proxy_password'] is defined and d['proxy_password'] != '' %}
-{{ 'proxy_password=' + d['proxy_password'] }}
-{% endif %}
-{% if d['proxy_auth_method'] is defined and d['proxy_auth_method'] in ['basic',
-  'digest', 'negotiate', 'ntlm', 'digest_ie', 'ntlm_wb', 'none', 'any'] %}
-{{ 'proxy_auth_method=' + d['proxy_auth_method'] }}
-{% endif %}
-{% if d['proxy_sslcacert'] is defined and d['proxy_sslcacert'] != '' %}
-{{ 'proxy_sslcacert=' + d['proxy_sslcacert'] }}
-{% endif %}
-{% if d['proxy_sslverify'] is defined and d['proxy_sslverify'] in
-  ['true', 'false'] %}
-{{ 'proxy_sslverify=' + d['proxy_sslverify'] }}
-{% endif %}
-{% if d['proxy_sslclientcert'] is defined and d['proxy_sslclientcert'] != '' %}
-{{ 'proxy_sslclientcert=' + d['proxy_sslclientcert'] }}
-{% endif %}
-{% if d['proxy_sslclientkey'] is defined and d['proxy_sslclientkey'] != '' %}
-{{ 'proxy_sslclientkey=' + d['proxy_sslclientkey'] }}
-{% endif %}
-{% if d['repo_gpgcheck'] is defined and d['repo_gpgcheck'] in
-  ['true', 'false'] %}
-{{ 'repo_gpgcheck=' + d['repo_gpgcheck'] }}
-{% endif %}
-{% if d['retries'] is defined and d['retries'] != '' %}
-{{ 'retries=' ~ d['retries'] }}
-{% endif %}
-{% if d['skip_if_unavailable'] is defined and d['skip_if_unavailable'] in
-  ['true', 'false'] %}
-{{ 'skip_if_unavailable=' + d['skip_if_unavailable'] }}
-{% endif %}
-{% if d['sslcacert'] is defined and d['sslcacert'] != '' %}
-{{ 'sslcacert=' + d['sslcacert'] }}
-{% endif %}
-{% if d['sslverify'] is defined and d['sslverify'] in ['true', 'false'] %}
-{{ 'sslverify=' + d['sslverify'] }}
-{% endif %}
-{% if d['sslverifystatus'] is defined and d['sslverifystatus'] in ['true',
-  'false'] %}
-{{ 'sslverifystatus=' + d['sslverifystatus'] }}
-{% endif %}
-{% if d['sslclientcert'] is defined and d['sslclientcert'] != '' %}
-{{ 'sslclientcert=' + d['sslclientcert'] }}
-{% endif %}
-{% if d['sslclientkey'] is defined and d['sslclientkey'] != '' %}
-{{ 'sslclientkey=' + d['sslclientkey'] }}
-{% endif %}
-{% if d['throttle'] is defined and d['throttle'] != '' %}
-{{ 'throttle=' ~ d['throttle'] }}
-{% endif %}
-{% if d['timeout'] is defined and d['timeout'] != '' %}
-{{ 'timeout=' ~ d['timeout'] }}
-{% endif %}
-{% if d['username'] is defined and d['username'] != '' %}
-{{ 'username=' ~ d['username'] }}
-{% endif %}
-{% if d['user_agent'] is defined and d['user_agent'] != '' %}
-{{ 'user_agent=' + d['user_agent'] }}
-{% endif %}
+{% include 'dnf_base.j2' %}
 {% endfor %}
